# Implementing_Blockchain_System

./: README.md
Sistema_Implementado/: README.md  README_GERAL.md  readme.md
Sistema_Implementado/provider_daemon/: Cargo.toml
Sistema_Implementado/provider_daemon/src/: main.rs
Sistema_Implementado/storage-dapp/: index.html  package-lock.json  package.json
Sistema_Implementado/storage-dapp/src/: contractController.ts
Sistema_Implementado/storage-dapp/src/backend/: package.json  server.js
Sistema_Implementado/storage-dapp/src/ui/: App.css  App.tsx
Sistema_Implementado/storage_client/: Cargo.toml  README.md
Sistema_Implementado/storage_client/src/: main.rs
Sistema_Implementado/storage_market/: Cargo.toml  teste.txt
Sistema_Implementado/storage_market/src/: lib.rs
Sistema_Implementado/tests/: validate_system.py
Sistema_Implementado/wormhole_server/: requirements.txt  server.py
contracts/storage_market/: Cargo.toml  StorageMarket.sol  lib.rs
contracts/storage_market/src/: lib.rs
ns-allinone-3.35/ns-3.35/: .lock-waf_linux_build
ns-allinone-3.35/ns-3.35/ParametrosNao_Aleatorios/: Teoria_Racional_integrada.tex
ns-allinone-3.35/ns-3.35/Parametros_aleatorios/: README.md
ns-allinone-3.35/ns-3.35/Parametros_aleatorios/Resultados_passados/: performance_analysis_results.json  simulation_results_detailed.json
ns-allinone-3.35/ns-3.35/Parametros_aleatorios/Rust_parametros_aleatorios/rust/: Cargo.toml  README.md
ns-allinone-3.35/ns-3.35/Parametros_aleatorios/Rust_parametros_aleatorios/rust/src/: model.rs  stats.rs
ns-allinone-3.35/ns-3.35/Parametros_aleatorios/docs/: README.md
ns-allinone-3.35/ns-3.35/Parametros_aleatorios/organizacao/: organize_results.py
ns-allinone-3.35/ns-3.35/Parametros_aleatorios/simulacao/: advanced_multi_agent_simulator.py  analyze_results.py  performance_analysis.py
ns-allinone-3.35/ns-3.35/resultados_graficos/: INDEX.md  RELATORIO_SIMULACAO.md  simulation_results.json
ns-allinone-3.35/ns-3.35/scratch/: cloud-multi-agent.cc  cloud-storage-simple.cc  storage_net.cc
rust_ipfs_client/: Cargo.toml
rust_ipfs_client/src/: add_file.rs  get_file.rs
(+68 files in other folders)
