[package]
name = "storage_market"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel <desousa054@gmail.com>"]

[lib]
name = "storage_market"
path = "src/lib.rs"

[dependencies]
ink = { version = "5.0.2", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]
