[package]
name = "storage_market"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink = { version = "5.0.0", default-features = false, features = ["std"] }

[lib]
name = "storage_market"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
