[package]
name = "simulacao_cloud_parametros_aleatorios"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
plotters = "0.3"
thiserror = "1.0"
